[gd_scene load_steps=9 format=3 uid="uid://3po5cq6p7ujc"]

[ext_resource type="Script" path="res://Scenes/Map/Scripts/map.gd" id="1_bqrdo"]
[ext_resource type="Texture2D" uid="uid://c3w108nm4f2sv" path="res://Sprites/Map/Map.png" id="2_dmyx0"]
[ext_resource type="PackedScene" uid="uid://b0781ipcpmjaf" path="res://Scenes/Map/quest.tscn" id="3_d64i7"]
[ext_resource type="LabelSettings" uid="uid://dw18pcv0wtiom" path="res://Themes/BodyLabel.tres" id="5_7xw65"]
[ext_resource type="PackedScene" uid="uid://c6gdoil0o70r1" path="res://Scenes/StorageUI/PartUI/part_button.tscn" id="6_epqax"]
[ext_resource type="PackedScene" uid="uid://bxfmkq8bgumev" path="res://Scenes/Map/Combat/combat.tscn" id="7_fpvvu"]
[ext_resource type="LabelSettings" uid="uid://cb4eflp81bok5" path="res://Themes/HeaderLabel.tres" id="9_cuwvo"]
[ext_resource type="Texture2D" uid="uid://etvfwjmynpus" path="res://Sprites/UI/Equipment.png" id="10_uiadi"]

[node name="Map" type="Node2D"]
script = ExtResource("1_bqrdo")

[node name="Control" type="ColorRect" parent="."]
offset_left = -1222.0
offset_top = -669.0
offset_right = 1221.0
offset_bottom = 766.0
color = Color(0, 0, 0, 0.247059)

[node name="Switch" type="Button" parent="."]
offset_left = -1273.0
offset_top = -679.0
offset_right = 1525.0
offset_bottom = 807.0
flat = true

[node name="TempMap" type="Sprite2D" parent="."]
texture = ExtResource("2_dmyx0")

[node name="Control" type="Control" parent="TempMap"]
layout_mode = 3
anchors_preset = 0
offset_left = -927.0
offset_top = -486.0
offset_right = 927.0
offset_bottom = 490.0

[node name="Quests" type="Node2D" parent="."]

[node name="Goblin Grotto" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -690.0
offset_top = 366.0
offset_right = -582.0
offset_bottom = 474.0
part = "m0"
enemy = "Goblin"
dataDisplayPosition = Vector2(-734, -235)

[node name="Slithering Stream" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -369.0
offset_top = 226.0
offset_right = -261.0
offset_bottom = 334.0
part = "s0"
enemy = "Serpent"
dataDisplayPosition = Vector2(-217, 126)

[node name="Fungal Grove" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = -425.0
offset_top = -356.0
offset_right = -317.0
offset_bottom = -248.0
part = "f0"
enemy = "Fairy"
dataDisplayPosition = Vector2(-454, -474)

[node name="Beetle Burrows" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 23.0
offset_top = -115.0
offset_right = 131.0
offset_bottom = -7.0
part = "m1"
enemy = "Gold Beetle"
dataDisplayPosition = Vector2(-400, 140)

[node name="Prickly Plateau" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 142.0
offset_top = 136.0
offset_right = 250.0
offset_bottom = 244.0
part = "s1"
enemy = "Magma Lizard"
dataDisplayPosition = Vector2(-374, -93)

[node name="Flaming Sands" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 560.0
offset_top = 296.0
offset_right = 668.0
offset_bottom = 404.0
part = "f1"
enemy = "Fire Spirit"
dataDisplayPosition = Vector2(2, 126)

[node name="Ancient Temple" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 594.0
offset_top = -15.0
offset_right = 702.0
offset_bottom = 93.0
part = "m2"
enemy = "Animated Armor"
dataDisplayPosition = Vector2(-292, -513)

[node name="Treasure Trove" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 108.0
offset_top = -388.0
offset_right = 216.0
offset_bottom = -280.0
part = "f2"
enemy = "Chest?"
dataDisplayPosition = Vector2(81, -273)

[node name="Wyvern Nest" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 313.0
offset_top = -209.0
offset_right = 421.0
offset_bottom = -101.0
part = "s2"
enemy = "Wyvern"
dataDisplayPosition = Vector2(-125, -383)

[node name="Dragon Peak" parent="Quests" instance=ExtResource("3_d64i7")]
offset_left = 573.0
offset_top = -468.0
offset_right = 681.0
offset_bottom = -360.0
part = "m0"
enemy = "Dragon"
dataDisplayPosition = Vector2(144, -482)

[node name="QuestName" type="Label" parent="."]
visible = false
z_index = 1
offset_left = -752.0
offset_top = 175.0
offset_right = -292.0
offset_bottom = 244.0
text = "Quest Name"
label_settings = ExtResource("9_cuwvo")
horizontal_alignment = 1

[node name="MaterialLabel" type="Label" parent="QuestName"]
layout_mode = 0
offset_left = 29.0
offset_top = 92.0
offset_right = 248.0
offset_bottom = 177.0
text = "common metal"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="Node2D" type="Node2D" parent="QuestName"]
position = Vector2(-2, 200)

[node name="Enemy" type="Label" parent="QuestName/Node2D"]
offset_top = -1.0
offset_right = 285.0
offset_bottom = 41.0
text = "Enemy:"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="QuestName/Node2D/Enemy"]
modulate = Color(0, 0, 0, 1)
position = Vector2(61, 57)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_uiadi")
hframes = 8
vframes = 6

[node name="Sprite2D2" type="Sprite2D" parent="QuestName/Node2D/Enemy"]
modulate = Color(0, 0, 0, 1)
position = Vector2(58, 100)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_uiadi")
hframes = 8
vframes = 6
frame = 40

[node name="EnemyData" type="Label" parent="QuestName/Node2D/Enemy"]
layout_mode = 0
offset_left = 1.0
offset_top = 37.0
offset_right = 275.0
offset_bottom = 202.0
text = "att
def"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="You" type="Label" parent="QuestName/Node2D"]
offset_left = 307.0
offset_right = 413.0
offset_bottom = 42.0
text = "You"
label_settings = ExtResource("5_7xw65")

[node name="YourData" type="Label" parent="QuestName/Node2D/You"]
layout_mode = 0
offset_left = -80.0
offset_top = 37.0
offset_right = 140.0
offset_bottom = 202.0
text = "att
def"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="QuestName/Node2D/You"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-30, 58)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_uiadi")
hframes = 8
vframes = 6

[node name="Sprite2D2" type="Sprite2D" parent="QuestName/Node2D/You"]
modulate = Color(0, 0, 0, 1)
position = Vector2(-33, 101)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_uiadi")
hframes = 8
vframes = 6
frame = 40

[node name="ColorRect" type="ColorRect" parent="QuestName"]
clip_children = 2
z_index = -1
layout_mode = 0
offset_right = 461.0
offset_bottom = 349.0
color = Color(0.933333, 0.862745, 0.701961, 1)

[node name="PartSprite" parent="QuestName" instance=ExtResource("6_epqax")]
layout_mode = 0
offset_left = 308.0
offset_top = 83.0
offset_right = 408.0
offset_bottom = 183.0

[node name="Combat" parent="." instance=ExtResource("7_fpvvu")]
visible = false
position = Vector2(-702, -425)

[node name="Win" type="ColorRect" parent="."]
offset_left = -1222.0
offset_top = -669.0
offset_right = 1221.0
offset_bottom = 766.0
color = Color(0, 0, 0, 0.247059)

[node name="ColorRect" type="ColorRect" parent="Win"]
layout_mode = 0
offset_left = 928.0
offset_top = 353.0
offset_right = 1520.0
offset_bottom = 1038.0
color = Color(0.933333, 0.862745, 0.701961, 1)

[node name="Win" type="Label" parent="Win"]
layout_mode = 0
offset_left = 967.0
offset_top = 397.0
offset_right = 1476.0
offset_bottom = 466.0
text = "You Win!"
label_settings = ExtResource("9_cuwvo")
horizontal_alignment = 1

[node name="Stats" type="Label" parent="Win"]
layout_mode = 0
offset_left = 967.0
offset_top = 467.0
offset_right = 1475.0
offset_bottom = 712.0
text = "you took 10 days to kill the dragon"
label_settings = ExtResource("5_7xw65")
horizontal_alignment = 1

[connection signal="pressed" from="Switch" to="." method="_on_switch_pressed"]
[connection signal="combat_done" from="Combat" to="." method="_on_combat_combat_done"]
[connection signal="player_death" from="Combat" to="." method="_on_combat_player_death"]
[connection signal="win" from="Combat" to="." method="_on_combat_win"]
